--- a/chatai.css
+++ b/chatai.css
@@ -255,4 +255,7 @@ scroll-behavior: smooth;
     #personal-training p {
       font-size: 3rem;
     }
+      #Contactus h3 {
+    font-size: 1rem;
+    }
   }
